--- a/src/Home.css
+++ b/src/Home.css
@@ -128,5 +128,20 @@
   width: 100%;
 }
 .inputDiv button {
-  font-size: 1rem;
+  font-size: 1.5rem;
+}
+.statButtons {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  cursor: pointer;
+}
+.statButtons button {
+  border: 2px solid #08ebdf;
+  border-radius: 15px;
+  padding: 10px;
+  background-color: #0872eb;
+}
+.statButtons button.current {
+  background-color: #033875;
 }
