--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@
 .authBTN {
   display: none;
 }
+.itemCard {
+  margin: 0.5rem;
+  padding: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 33%;
+  height: auto;
+  background-color: rgb(34, 21, 42);
+}
 .loadingScreen {
   width: 100%;
   height: 80vh;
