--- a/src/components/InventoryBox.css
+++ b/src/components/InventoryBox.css
@@ -10,11 +10,25 @@
   margin: 10px;
   border-radius: 20px;
 }
-.upgradeBox {
-  width: 80%;
+.upgradeDiv {
+  width: 100%;
   height: auto;
-  border: red solid 2px;
+  margin: 0.5rem;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(27, 7, 26);
+  align-items: center;
 }
+.upgradeBox {
+  width: 100%;
+  height: auto;
+  margin: 0.5rem;
+  border-radius: 25px;
+  display: flex;
+  justify-content: space-around;
+}
+
 .grade-1 {
   box-shadow: inset 1px 1px 5px 3px rgb(0, 47, 255, 0.685),
     inset -1px -1px 5px 3px rgba(0, 47, 255, 0.685);
@@ -41,12 +55,7 @@
   justify-content: center;
   padding: 1rem;
 }
-.weaponDiv button {
-  width: 50%;
-  font-size: 2rem;
-  padding: 15px;
-  cursor: pointer;
-}
+
 .itemRow {
   display: flex;
   justify-content: space-between;
@@ -61,4 +70,35 @@
   cursor: pointer;
   padding: 8px;
   color: rgb(78, 230, 41);
+}
+
+.upgradeButtons button.current {
+  color: rgb(21, 255, 0);
+}
+.upgradeButtons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+}
+.statBTN {
+  letter-spacing: 2px;
+  font-size: 1.5rem;
+  color: rgb(255, 0, 0);
+  border: none;
+  background: none;
+  width: 50%;
+  cursor: pointer;
+  padding: 5px;
+}
+.inputBTN {
+  cursor: pointer;
+  border: none;
+  border-radius: 15px;
+  width: 25px;
+  margin: 0px 10px;
+  background-color: rgb(255, 0, 0);
+}
+.inputBTN.current {
+  background-color: rgb(38, 255, 0);
 }
