--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 }
 
 #root {
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   background-color: rgba(14, 1, 1, 1);
   min-height: 100vh;
